# somake

./: CMakeLists.txt  README.md  README_pkg.txt  config.h.in
comp/: namelen.h  progname.c  progname.h  timestruc_t.h  wcsdup.c  wcsdup.h
example/: hello.c  helloworld.c  main_foo.c  makefile  world.c  world.h
include/bsd/: bsd.h
include/mk/: defs.h
include/mksh/: defs.h
lib/bsd/: bsd.cc
lib/mksh/: dosys.cc  macro.cc  misc.cc
lib/vroot/: lock.cc
test/: empty_cmd.mf
